golden/error/lex_unmatched_rparen.test
)

# output:
 --> stdin:1:0
  |
1 | )
  | ^
Error: Found unmatched ')'.
